update line 4 title
More awesome

--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to Sonu slide deck!"
+title: "Hello, Welcome to Sonu Panikar's slide deck!"
 ---
 
 Use the right arrow to begin!
